Added calendar dataservice, to get calendar instances from one place

--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,8 @@
 <script src="src/requests/directives/directive.js"></script>
 <script src="src/requests/controllers/controller.js"></script>
 <script src="src/requests/services/service.js"></script>
+<script src="src/common\services\calendarService.js"></script>
+<script src="src/common\filters\common.js"></script>
 		<!-- endbuild -->
 </body>
 </html>
